--- a/styles.css
+++ b/styles.css
@@ -49,25 +49,26 @@ h1 {
   font-size: 18px;
 
   width: 60%;
-  margin-right: 10px;
 }
 
-#search-btn {
+.btn {
   background-color: #474f7a;
   color: #ffd0ec;
   border: 2px solid #ffd0ec;
   font-size: 18px;
-
-  padding: 10px 20px;
-  border-radius: 5px;
+  margin-left: 10px;
   cursor: pointer;
+  padding: 10px 20px;
   transition: color 0.3s, background-color 0.3s, border 0.3s;
+
+  border-radius: 5px;
 }
-#search-btn:hover {
+.btn:hover {
   background-color: #ffd0ec;
   color: #474f7a;
   border: 2px solid #474f7a;
 }
+
 /* Weather info styles */
 .weather-info {
   margin: 20px;
