--- a/styles.css
+++ b/styles.css
@@ -87,10 +87,6 @@ h1 {
   width: 30%;
 }
 
-.current-weather.hidden,
-.forecast.hidden {
-  display: none;
-}
 .current-weather h2 {
   font-size: 36px;
   text-align: center;
@@ -203,4 +199,42 @@ footer {
   .forecast-days > div > div {
     margin-bottom: 40px;
   }
+}
+.loading-spinner {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.808);
+  z-index: 1000;
+  margin: 0px auto;
+}
+
+.spinner {
+  border: 4px solid #f3f3f3;
+  border-top: 4px solid #3498db;
+  border-radius: 50%;
+  width: 40px;
+  height: 40px;
+  animation: spin 1s linear infinite;
+  margin: 0px auto;
+  margin-bottom: 10px;
+}
+
+@keyframes spin {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
+
+.hidden {
+  display: none;
 }
