--- a/styles.css
+++ b/styles.css
@@ -24,6 +24,8 @@ a {
 header {
   background-color: #1f2544;
   padding: 10px;
+  display: flex;
+  flex-direction: column;
   text-align: center;
 }
 ul {
@@ -33,11 +35,19 @@ ul {
 h1 {
   font-size: 4rem;
 }
+
+.buttons {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-bottom: 20px;
+}
 /* Search container styles */
 .search-container {
   display: flex;
   justify-content: center;
-  margin: 30px 0;
+  margin: 30px auto;
+  width: 600px;
 }
 
 #location-input {
@@ -150,56 +160,6 @@ footer {
   bottom: 0;
 }
 
-@media (max-width: 1080px) {
-  h1 {
-    font-size: 2.5rem;
-  }
-  .current-weather {
-    flex-direction: column;
-    width: 45%;
-  }
-  .weather-info {
-    margin: 0px;
-  }
-  .weather-info h2 {
-    margin-bottom: 20px;
-  }
-  .current-weather p {
-    text-align: left;
-  }
-
-  .forecast {
-    width: 70%;
-  }
-  .forecast-days > div {
-    flex-direction: column;
-    width: 80%;
-  }
-  .forecast-days > div > div {
-    margin-bottom: 40px;
-  }
-}
-
-@media (max-width: 540px) {
-  .current-weather {
-    flex-direction: column;
-    width: 90%;
-    margin: 20px auto;
-  }
-  .forecast {
-    width: 90%;
-  }
-  .forecast-days {
-    padding: 10px;
-  }
-  .forecast-days > div {
-    flex-direction: column;
-    width: 90%;
-  }
-  .forecast-days > div > div {
-    margin-bottom: 40px;
-  }
-}
 .loading-spinner {
   display: flex;
   flex-direction: column;
@@ -237,4 +197,58 @@ footer {
 
 .hidden {
   display: none;
+}
+
+@media (max-width: 1080px) {
+  h1 {
+    font-size: 2.5rem;
+  }
+  .current-weather {
+    flex-direction: column;
+    width: 70%;
+  }
+  .weather-info {
+    margin: 0px;
+  }
+  .weather-info h2 {
+    margin-bottom: 20px;
+  }
+  .current-weather p {
+    text-align: left;
+  }
+
+  .forecast {
+    width: 70%;
+  }
+  .forecast-days > div {
+    flex-direction: column;
+    width: 80%;
+  }
+  .forecast-days > div > div {
+    margin-bottom: 40px;
+  }
+}
+
+@media (max-width: 540px) {
+  .current-weather {
+    flex-direction: column;
+    width: 90%;
+    margin: 20px auto;
+  }
+  .forecast {
+    width: 90%;
+  }
+  .search-container {
+    max-width: 70%;
+  }
+  .forecast-days {
+    padding: 10px;
+  }
+  .forecast-days > div {
+    flex-direction: column;
+    width: 90%;
+  }
+  .forecast-days > div > div {
+    margin-bottom: 40px;
+  }
 }
